--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <li><a href="dualboot.html">デュアルブート</a></li>
                 <li><a href="apache.html">Apache設定</a></li>
                 <li><a href="security.html">セキュリティ</a></li>
+                <li><a href="ssh.html">SSH</a></li>
+                <li><a href="docker.html">Docker</a></li>
             </ul>
         </div>
     </nav>
@@ -26,7 +28,7 @@
     <main>
         <div class="content">
             <h2>Linux サーバー構築ガイド</h2>
-            <p>このガイドでは、Linuxサーバーの構築手順を詳しく解説します。</p>
+            <p>このガイドでは、Linuxサーバーの構築手順を解説します。</p>
             
             <div class="features">
                 <div class="feature-card">
@@ -48,6 +50,16 @@
                     <h3>セキュリティ</h3>
                     <p>サーバーのセキュリティ設定</p>
                     <a href="security.html" class="button">詳細を見る</a>
+                </div>
+                <div class="feature-card">
+                    <h3>SSH</h3>
+                    <p>SSHの設定</p>
+                    <a href="ssh.html" class="button">詳細を見る</a>
+                </div>
+                <div class="feature-card">
+                    <h3>Docker</h3>
+                    <p>Dockerの設定</p>
+                    <a href="docker.html" class="button">詳細を見る</a>
                 </div>
             </div>
         </div>
