--- a/dualboot.html
+++ b/dualboot.html
@@ -21,6 +21,9 @@
                 <li><a href="security.html">セキュリティ</a></li>
                 <li><a href="ssh.html">SSH</a></li>
                 <li><a href="docker.html">Docker</a></li>
+                <li><a href="vim.html">Vimの操作</a></li>
+                <li><a href="japanese.html">日本語入力</a></li>
+                <li><a href="reference.html">参考資料</a></li>
             </ul>
         </div>
     </nav>
@@ -40,7 +43,7 @@
                     <li>「スタート」をクリックしてUSBの作成を開始</li>
                 </ol>
                 <div class="image-placeholder">
-                    <img src="/api/placeholder/800/400" alt="Rufusの設定画面" />
+                    <img src="../images/画像1.png" alt="Rufusの設定画面" />
                 </div>
                 <p>Rufusは、USBドライブを使ってブート可能なメディア（起動ディスク）
                     を作成するための無料のWindows用ソフトウェアです。</p>
@@ -56,7 +59,7 @@
                     <li>設定を保存して再起動</li>
                 </ol>
                 <div class="image-placeholder">
-                    <img src="/api/placeholder/800/400" alt="BIOS設定画面" />
+                    <img src="../images/画像2.jpg" alt="BIOS設定画面" />
                 </div>
                 <p>再び起動するとubuntuのインストーラのブート画面になるため、インストーラをここで起動します。</p>
             </div>
@@ -73,7 +76,7 @@
                     <li>インストール完了後、USBを抜いて再起動</li>
                 </ol>
                 <div class="image-placeholder">
-                    <img src="/api/placeholder/800/400" alt="Ubuntuインストール画面" />
+                    <img src="../images/画像3.jpg" alt="Ubuntuインストール画面" />
                 </div>
                 <p>6.の際にUSBを抜かなかったら、再びインストーラが起動してしまうため注意する。</p>
                 <p>3.の際に、「ディスクを削除してubuntuをインストール」を選択するとWindowsの領域をすべて削除して
