--- a/reference.html
+++ b/reference.html
@@ -30,37 +30,14 @@
 
     <main>
         <div class="content">
-            <h2>必要な準備</h2>
-            
+            <h2>参考資料</h2>
             <div class="step-card">
-                <h3>用意するもの</h3>
-                <ul>
-                    <li>USBメモリ</li>
-                    <li>使用PC：ACER の NE132-F14P</li>
-                </ul>
-                <p>
-                    <a href="https://acerjapan.com/gateway/notebook/mobile/ne/NE132-F14P" target="_blank">
-                        PCの詳細仕様を確認する
-                    </a>
-                </p>
-            </div>
-
-            <div class="step-card">
-                <h3>Ubuntuのダウンロード</h3>
-                <p>Ubuntu Desktop 日本語 Remixをダウンロードします。</p>
-                <p>これはオリジナルのUbuntuに日本語環境の設定を追加したものです。</p>
-                <a href="https://www.ubuntulinux.jp/download/ja-remix" target="_blank" class="button">
-                    Ubuntuをダウンロード
-                </a>
-            </div>
-
-            <div class="step-card">
-                <h3>Rufusのダウンロード</h3>
-                <p>USBブート作成ツールのRufusをダウンロードします。</p>
-                <a href="https://rufus.ie/ja/" target="_blank" class="button">
-                    Rufusをダウンロード
-                </a>
-            </div>
+                <h3></h3>
+                <p>●<a href="https://distronanakey.livedoor.blog/archives/12782415.html">ナナッキーのLinux紹介〜脱Windows〜</a> https://distronanakey.livedoor.blog/archives/12782415.html <br>WindowsとUbuntuのデュアルブート方法、
+                    OSの起動優先順位、待ち時間の設定方法、領域の変更方法等全部まとめて説明します～
+                    Linuxを使ってみたい方は必見です～</p>
+                <p>●<a href="https://shell-mag.com/rensai-linuxpc-04/">シェルスクリプトマガジン</a> https://shell-mag.com/rensai-linuxpc-04/<br> 
+                    第4回  日本語入力を可能にする</p>
         </div>
     </main>
 
