--- a/security.html
+++ b/security.html
@@ -21,6 +21,9 @@
                 <li><a href="security.html">セキュリティ</a></li>
                 <li><a href="ssh.html">SSH</a></li>
                 <li><a href="docker.html">Docker</a></li>
+                <li><a href="vim.html">Vimの操作</a></li>
+                <li><a href="japanese.html">日本語入力</a></li>
+                <li><a href="reference.html">参考資料</a></li>
             </ul>
         </div>
     </nav>
@@ -88,7 +91,7 @@ sudo htpasswd -c /etc/apache2/.htpasswd username</code></pre>
             </div>
             <p>「http://localhost」にアクセスして図のような画面になれば設定は成功である。</p>
             <div class="image-placeholder">
-                <img src="/api/placeholder/800/400" alt="Basic認証" />
+                <img src="../images/画像6.jpg" alt="Basic認証" />
             </div>
         </div>
     </main>
