--- a/apache.html
+++ b/apache.html
@@ -21,6 +21,9 @@
                 <li><a href="security.html">セキュリティ</a></li>
                 <li><a href="ssh.html">SSH</a></li>
                 <li><a href="docker.html">Docker</a></li>
+                <li><a href="vim.html">Vimの操作</a></li>
+                <li><a href="japanese.html">日本語入力</a></li>
+                <li><a href="reference.html">参考資料</a></li>
             </ul>
         </div>
     </nav>
@@ -59,7 +62,7 @@ sudo systemctl status apache2</code></pre>
                     <button class="copy-button">コピー</button>
                 </div>
                 <div class="image-placeholder">
-                    <img src="/api/placeholder/800/400" alt="Apache状態確認画面" />
+                    <img src="../images/画像4.png" alt="Apache状態確認画面" />
                 </div>
                 <p>起動できていれば、図のようにactive(running)と表示されます。</p>
                 <p>次に、ブラウザから、「http://<サーバのIPアドレス>」にアクセスし、図のようなApacheのウェルカムページが
@@ -67,7 +70,7 @@ sudo systemctl status apache2</code></pre>
                     また、サーバ上で Web サーバにアクセスする場合、「http://localhost」でも表示できます。
                 </p>
                 <div class="image-placeholder">
-                    <img src="/api/placeholder/800/400" alt="Apache2デフォルトページ" />
+                    <img src="../images/画像5.jpg" alt="Apache2デフォルトページ" />
                 </div>
             </div>
 
@@ -91,7 +94,7 @@ sudo touch /var/www/your-site/index.html</code></pre>
 
             <div class="step-card">
                 <h3>4. 仮想ホスト設定ファイルの編集</h3>
-                <p>Apache設定ファイルを編集します。</p>
+                <p>Apache設定ファイルを編集します。Vimの操作方法はメニューから「Vimの操作」を参照</p>
                 <div class="code-block">
                     <pre><code class="language-bash"># 設定ファイルの編集
 sudo vi /etc/apache2/sites-available/your-site.conf</code></pre>
