--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <li><a href="security.html">セキュリティ</a></li>
                 <li><a href="ssh.html">SSH</a></li>
                 <li><a href="docker.html">Docker</a></li>
+                <li><a href="vim.html">Vimの操作</a></li>
+                <li><a href="japanese.html">日本語入力</a></li>
+                <li><a href="reference.html">参考資料</a></li>
             </ul>
         </div>
     </nav>
