--- a/reference.html
+++ b/reference.html
@@ -33,12 +33,22 @@
             <h2>参考資料</h2>
             <div class="step-card">
                 <h3></h3>
-                <p>●<a href="https://distronanakey.livedoor.blog/archives/12782415.html">ナナッキーのLinux紹介〜脱Windows〜</a> https://distronanakey.livedoor.blog/archives/12782415.html <br>WindowsとUbuntuのデュアルブート方法、
+                <p>●<a href="https://distronanakey.livedoor.blog/archives/12782415.html">ナナッキーのLinux紹介〜脱Windows〜</a> https://distronanakey.livedoor.blog/archives/12782415.html <br>「WindowsとUbuntuのデュアルブート方法、
                     OSの起動優先順位、待ち時間の設定方法、領域の変更方法等全部まとめて説明します～
-                    Linuxを使ってみたい方は必見です～</p>
+                    Linuxを使ってみたい方は必見です～」</p>
                 <p>●<a href="https://shell-mag.com/rensai-linuxpc-04/">シェルスクリプトマガジン</a> https://shell-mag.com/rensai-linuxpc-04/<br> 
-                    第4回  日本語入力を可能にする</p>
-        </div>
+                    「第4回  日本語入力を可能にする」</p>
+                <p>●<a href="https://zenn.dev/popo_daddy/articles/65346ec43a7c21">Zenn</a> https://zenn.dev/popo_daddy/articles/65346ec43a7c21<br> 
+                    「Docker groupにユーザアカウントを登録 in Ubuntu」</p>
+                <p>●<a href="https://zenn.dev/mo_ri_regen/articles/vim-four-modes">Zenn</a> https://zenn.dev/mo_ri_regen/articles/vim-four-modes<br> 
+                    「Vimの4つのモードを使いこなす」</p>
+                <p>●<a href="https://qiita.com/SUZUKI_Masaya/items/1fd9489e631c78e5b007">Qiita</a> https://qiita.com/SUZUKI_Masaya/items/1fd9489e631c78e5b007<br> 
+                    「aptコマンドチートシート」</p>
+                <p>●<a href="https://protogram.jp/lesson/docker-command#block-78ba0dc8904e44bf81632f80d473c9d1">Protogram</a> https://protogram.jp/lesson/docker-command#block-78ba0dc8904e44bf81632f80d473c9d1<br> 
+                    「Dockerでよく使うコマンドまとめ~入門編~」</p>                
+                <p>●<a href="https://matsuand.github.io/docs.docker.jp.onthefly/engine/reference/commandline/container_ls/">Docker Docs</a> https://matsuand.github.io/docs.docker.jp.onthefly/engine/reference/commandline/container_ls/<br> 
+                    「docker container ls」</p>
+            </div>
     </main>
 
     <footer>
