--- a/docker.html
+++ b/docker.html
@@ -223,7 +223,7 @@ docker run -dit --name my-apache-app -p 8080:80 -v ./htdocs:/usr/local/apache2/h
                 </ol>
                 <p>例えば、「Hello World!!!!」記述されたindex.htmlをhtdocsに配置すれば、ブラウザで画像のような内容が表示される。</p>
                 <div class="image-placeholder">
-                    <img src="../images/画像9.png" alt="Rufusの設定画面" />
+                    <img src="../images/画像9.png" alt="8080" />
                 </div>
             </div>
         </div>
