画像の表示

--- a/apache.html
+++ b/apache.html
@@ -70,7 +70,7 @@ sudo systemctl status apache2</code></pre>
                     また、サーバ上で Web サーバにアクセスする場合、「http://localhost」でも表示できます。
                 </p>
                 <div class="image-placeholder">
-                    <img src="../images/画像5.jpg" alt="Apache2デフォルトページ" />
+                    <img src="./images/画像5.jpg" alt="Apache2デフォルトページ" />
                 </div>
             </div>
 
