--- a/dualboot.html
+++ b/dualboot.html
@@ -43,7 +43,7 @@
                     <li>「スタート」をクリックしてUSBの作成を開始</li>
                 </ol>
                 <div class="image-placeholder">
-                    <img src="/linux-server-guide/images/画像1.png" alt="Rufusの設定画面" />
+                    <img src="/linux-server-guide/images/image.png" alt="Rufusの設定画面" />
                 </div>
                 <p>Rufusは、USBドライブを使ってブート可能なメディア（起動ディスク）
                     を作成するための無料のWindows用ソフトウェアです。</p>
