--- a/dualboot.html
+++ b/dualboot.html
@@ -59,7 +59,7 @@
                     <li>設定を保存して再起動</li>
                 </ol>
                 <div class="image-placeholder">
-                    <img src="../images/画像2.jpg" alt="BIOS設定画面" />
+                    <img src="/linux-server-guide/image2.jpg" alt="BIOS設定画面" />
                 </div>
                 <p>再び起動するとubuntuのインストーラのブート画面になるため、インストーラをここで起動します。</p>
             </div>
@@ -76,7 +76,7 @@
                     <li>インストール完了後、USBを抜いて再起動</li>
                 </ol>
                 <div class="image-placeholder">
-                    <img src="../images/画像3.jpg" alt="Ubuntuインストール画面" />
+                    <img src="/linux-server-guide/image3.jpg" alt="Ubuntuインストール画面" />
                 </div>
                 <p>6.の際にUSBを抜かなかったら、再びインストーラが起動してしまうため注意する。</p>
                 <p>3.の際に、「ディスクを削除してubuntuをインストール」を選択するとWindowsの領域をすべて削除して
