--- a/japanese.html
+++ b/japanese.html
@@ -59,7 +59,7 @@ sudo apt install -y fcitx-mozc</code></pre>
                 <h3>入力、変換操作のカスタマイズ</h3>
                 <p>入力や変換の操作のカスタマイズは、「Mozc プロパティ」ダイアログから行うことができます。</p>
                 <div class="image-placeholder">
-                    <img src="../images/画像7.png" alt="Rufusの設定画面" />
+                    <img src="/linux-server-guide/image7.png" alt="mozcの設定" />
                 </div>
             </div>
         </div>
