--- a/dualboot.html
+++ b/dualboot.html
@@ -61,6 +61,12 @@
                 <div class="image-placeholder">
                     <img src="/linux-server-guide/images/image2.jpg" alt="BIOS設定画面" />
                 </div>
+                <div class="image-placeholder">
+                    <img src="images/image2.jpg" alt="BIOS設定画面" />
+                </div>
+                <div class="image-placeholder">
+                    <img src="/images/image2.jpg" alt="BIOS設定画面" />
+                </div>
                 <p>再び起動するとubuntuのインストーラのブート画面になるため、インストーラをここで起動します。</p>
             </div>
 
