--- a/vim.html
+++ b/vim.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>準備 - Linux サーバー構築ガイド</title>
+    <title>Vimの操作 - Linux サーバー構築ガイド</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
@@ -12,8 +12,13 @@
 <body>
     <nav>
         <div class="nav-content">
+            <div class="menu-toggle" id="menuToggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <h1>Linux サーバー構築ガイド</h1>
-            <ul>
+            <ul id="navMenu">
                 <li><a href="index.html">ホーム</a></li>
                 <li><a href="preparation.html">準備</a></li>
                 <li><a href="dualboot.html">デュアルブート</a></li>
@@ -34,30 +39,30 @@
             <div class="step-card">
                 <h3>Vimとは</h3>
                 <p>Vimは、Linuxに標準搭載されている高機能なテキストエディタです。コマンドモードと入力モードを使い分けることで、効率的なテキスト編集が可能です。</p>
-        </div>
-        <div class="step-card">
-            <h3>Vimの基本操作</h3>
-            <p>起動と終了(操作: コマンド)</p>
-            <ol>
-                <li>Vim起動: vim ファイル名</li>
-                <li>入力モード：コマンドモードからiキーで移行（画面下部に--INSERT--と表示）</li>
-                <li>コマンドモード（デフォルト）：Escキーで移行</li>
-                <li>Vim終了: :q（保存せず終了）</li>
-                <li>Vim保存して終了(): :wqまたはZZ</li>
-                <li>Vim強制終了: :q!</li>
-            </ol>
-            <p>基本的なカーソル移動</p>
-            <ol>
-                <li>h：左へ移動</li>
-                <li>j：下へ移動</li>
-                <li>k：上へ移動</li>
-                <li>l：右へ移動</li>
-                <li>0：行頭へ移動</li>
-                <li>$：行末へ移動</li>
-                <li>gg：ファイル先頭へ移動</li>
-                <li>G：ファイル末尾へ移動</li>
-            </ol>
-            <p>編集操作</p>
+            </div>
+            <div class="step-card">
+                <h3>Vimの基本操作</h3>
+                <p>起動と終了(操作: コマンド)</p>
+                <ol>
+                    <li>Vim起動: vim ファイル名</li>
+                    <li>入力モード：コマンドモードからiキーで移行（画面下部に--INSERT--と表示）</li>
+                    <li>コマンドモード（デフォルト）：Escキーで移行</li>
+                    <li>Vim終了: :q（保存せず終了）</li>
+                    <li>Vim保存して終了: :wqまたはZZ</li>
+                    <li>Vim強制終了: :q!</li>
+                </ol>
+                <p>基本的なカーソル移動</p>
+                <ol>
+                    <li>h：左へ移動</li>
+                    <li>j：下へ移動</li>
+                    <li>k：上へ移動</li>
+                    <li>l：右へ移動</li>
+                    <li>0：行頭へ移動</li>
+                    <li>$：行末へ移動</li>
+                    <li>gg：ファイル先頭へ移動</li>
+                    <li>G：ファイル末尾へ移動</li>
+                </ol>
+                <p>編集操作</p>
                 <ol>
                     <li>x：カーソル位置の文字を削除</li>
                     <li>X：カーソル前の文字を削除</li>
@@ -66,7 +71,7 @@
                     <li>p：カーソル位置の後に貼り付け</li>
                     <li>P：カーソル位置の前に貼り付け</li>
                 </ol>
-            <p>検索と置換</p>
+                <p>検索と置換</p>
                 <ol>
                     <li>/検索文字列：前方検索</li>
                     <li>?検索文字列：後方検索</li>
@@ -80,14 +85,15 @@
                 <p>モード表示が出ない場合は、ホームディレクトリに.vimrcファイルを作成し、以下を追加します。</p>
                 <div class="code-block">
                     <pre><code class="language-bash"># .vimrcファイルの編集(インサートモード時「--insert--」と表示されるようになる)
-Cpyset showmode
+set showmode
 #その他の便利な.vimrc設定：
-Copyset number     " 行番号表示
+set number     " 行番号表示
 set syntax=on       " シンタックスハイライト
 set autoindent       " 自動インデント</code></pre>
                     <button class="copy-button">コピー</button>
                 </div>
             </div>
+        </div>
     </main>
 
     <footer>
@@ -95,7 +101,12 @@ set autoindent       " 自動インデント</code></pre>
     </footer>
 
     <script>
-        // コピーボタンの機能
+        // ハンバーガーメニューの制御
+        document.getElementById('menuToggle').addEventListener('click', function() {
+            document.getElementById('navMenu').classList.toggle('active');
+        });
+
+        // コードブロックのコピー機能
         document.querySelectorAll('.copy-button').forEach(button => {
             button.addEventListener('click', () => {
                 const code = button.previousElementSibling.textContent;
